# seclab-taskflow-agent

./: README.md  available_tools.py  main.py  mcp_utils.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  publish-to-pypi.yaml  publish-to-testpypi.yaml  release.yml  smoketest.yaml
configs/: namespace_config.yaml
doc/: GRAMMAR.md  MIGRATION.md
docker/: run.sh
examples/model_configs/: model_config.yaml  responses_api.yaml
examples/personalities/: banana_expert.yaml  echo.yaml  example_triage_agent.yaml  fruit_expert.yaml  orange_expert.yaml
examples/taskflows/: CVE-2023-2283.yaml  comprehensive_test.yaml  echo.yaml  echo_responses_api.yaml  edge_case_test.yaml  example.yaml  example_globals.yaml  example_large_list_result_iter.yaml  example_repeat_prompt.yaml  example_repeat_prompt_async.yaml  example_repeat_prompt_dictionary.yaml  example_responses_api.yaml  example_reusable_prompt.yaml  example_reusable_taskflows.yaml  example_triage_taskflow.yaml  single_step_taskflow.yaml
mcp_servers/logbook/: logbook.py
mcp_servers/memcache/memcache_backend/: dictionary_file.py
personalities/examples/: echo.yaml
release_tools/: copy_files.py  publish_docker.py
scripts/: migrate_to_jinja2.py  test_examples.sh
src/seclab_taskflow_agent/: __about__.py  __init__.py  __main__.py  _stream.py  _watchdog.py  agent.py  available_tools.py  banner.py  capi.py  cli.py  env_utils.py  exceptions.py  mcp_lifecycle.py  mcp_prompt.py  mcp_transport.py  mcp_utils.py  models.py  path_utils.py  prompt_parser.py  render_utils.py  runner.py  session.py  shell_utils.py  template_utils.py
src/seclab_taskflow_agent/mcp_servers/codeql/: client.py  exceptions.py  mcp_server.py
src/seclab_taskflow_agent/mcp_servers/codeql/jsonrpyc/: __init__.py  __meta__.py
src/seclab_taskflow_agent/mcp_servers/echo/: echo.py
src/seclab_taskflow_agent/mcp_servers/logbook/: logbook.py
src/seclab_taskflow_agent/mcp_servers/memcache/: memcache.py
src/seclab_taskflow_agent/mcp_servers/memcache/memcache_backend/: dictionary_file.py  sql_models.py  sqlite.py
src/seclab_taskflow_agent/personalities/: assistant.yaml  c_auditer.yaml
src/seclab_taskflow_agent/sdk/: __init__.py  base.py  capabilities.py  errors.py  hooks.py
src/seclab_taskflow_agent/sdk/copilot_sdk/: __init__.py  backend.py  mcp.py  permissions.py
src/seclab_taskflow_agent/sdk/openai_agents/: __init__.py  backend.py
src/seclab_taskflow_agent/toolboxes/: codeql.yaml  echo.yaml  github_official.yaml  logbook.yaml  memcache.yaml
taskflows/: GRAMMAR.md
taskflows/examples/: echo.yaml  example.yaml
tests/: test_api_endpoint_config.py  test_capi_extended.py  test_cli.py  test_cli_parser.py  test_env_utils.py  test_mcp_transport.py  test_models.py  test_prompt_parser_edge.py  test_runner.py  test_sdk_backends_parametrised.py  test_sdk_base.py  test_sdk_capabilities.py  test_sdk_copilot_adapter.py  test_sdk_copilot_mcp.py  test_sdk_copilot_permissions.py  test_sdk_hooks.py  test_sdk_live_smoke.py  test_sdk_openai_adapter.py  test_session.py  test_session_edge.py  test_stream.py  test_template_utils.py  test_watchdog.py  test_yaml_parser.py
tests/data/: test_globals_taskflow.yaml  test_prompt_with_variables.yaml  test_reusable_taskflow_with_variables.yaml  test_taskflow_using_reusable.yaml  test_version_float.yaml  test_version_integer.yaml  test_yaml_parser_personality000.yaml
