[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seclab-taskflow-agent"
dynamic = ["version"]
description = "A taskflow agent for the SecLab project, enabling secure and automated workflow execution."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "GitHub Security Lab", email = "securitylab@github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aiofiles==24.1.0",
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "attrs==25.3.0",
  "Authlib==1.6.5",
  "certifi==2025.6.15",
  "cffi==2.0.0",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "colorama==0.4.6",
  "cryptography==45.0.7",
  "cyclopts==3.24.0",
  "distro==1.9.0",
  "dnspython==2.8.0",
  "docstring_parser==0.17.0",
  "docutils==0.22",
  "email-validator==2.3.0",
  "exceptiongroup==1.3.0",
  "fastmcp==2.12.2",
  "griffe==1.7.3",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "httpx-sse==0.4.1",
  "idna==3.10",
  "importlib_metadata==8.7.0",
  "isodate==0.7.2",
  "jedi==0.19.2",
  "jiter==0.10.0",
  "jsonschema==4.24.0",
  "jsonschema-path==0.3.4",
  "jsonschema-specifications==2025.4.1",
  "lazy-object-proxy==1.12.0",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.2",
  "mcp==1.13.1",
  "mdurl==0.1.2",
  "more-itertools==10.8.0",
  "openai==1.107.0",
  "openai-agents==0.2.11",
  "openapi-core==0.19.5",
  "openapi-pydantic==0.5.1",
  "openapi-schema-validator==0.6.3",
  "openapi-spec-validator==0.7.2",
  "parse==1.20.2",
  "parso==0.8.4",
  "pathable==0.4.4",
  "platformdirs==4.5.0",
  "pluggy==1.6.0",
  "pycparser==2.23",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "pydantic_core==2.33.2",
  "Pygments==2.19.2",
  "pyperclip==1.9.0",
  "python-dotenv==1.1.1",
  "python-lsp-jsonrpc==1.1.2",
  "python-lsp-server==1.12.2",
  "python-multipart==0.0.20",
  "PyYAML==6.0.2",
  "referencing==0.36.2",
  "requests==2.32.4",
  "rfc3339-validator==0.1.4",
  "rich==14.0.0",
  "rich-rst==1.3.1",
  "rpds-py==0.26.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "SQLAlchemy==2.0.41",
  "sse-starlette==2.4.1",
  "starlette==0.49.1",
  "strenum==0.4.15",
  "tqdm==4.67.1",
  "typer==0.16.0",
  "types-requests==2.32.4.20250611",
  "typing-inspection==0.4.1",
  "typing_extensions==4.14.1",
  "ujson==5.10.0",
  "urllib3==2.5.0",
  "uvicorn==0.35.0",
  "zipp==3.23.0",
]

[project.urls]
Source = "https://github.com/GitHubSecurityLab/seclab-taskflow-agent"
Issues = "https://github.com/GitHubSecurityLab/seclab-taskflow-agent/issues"

[tool.hatch.version]
path = "src/seclab_taskflow_agent/__about__.py"

[tool.hatch.envs.default.scripts]
main = "python -m seclab_taskflow_agent {args:tests}"
sync-deps = ""

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/seclab_taskflow_agent tests}"

[tool.coverage.run]
source_pkgs = ["seclab_taskflow_agent", "tests"]
branch = true
parallel = true
omit = [
  "src/seclab_taskflow_agent/__about__.py",
]

[tool.coverage.paths]
seclab_taskflow_agent = ["src/seclab_taskflow_agent", "*/seclab-taskflow-agent/src/seclab_taskflow_agent"]
tests = ["tests", "*/seclab-taskflow-agent/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = [
  # Style rules that are too opinionated
  "TID252",  # Relative imports are valid and preferred in Python packages
  "T201",    # Print statements are valid for CLI tools and scripts
  "T203",    # pprint is also valid for debugging
  "FA100",   # Future annotations not required for Python 3.9+
  "FA102",   # Future annotations not required for Python 3.9+
  "EM101",   # Exception message string formatting - too strict
  "EM102",   # Exception message f-string formatting - too strict
  "EM103",   # Exception message .format() - too strict
  "TRY003",  # Long messages outside exception class - too strict
  "TRY300",  # Consider moving statement to else block - too strict
  "TRY301",  # Abstract raise to an inner function - too strict
  "TRY400",  # Use logging.exception instead of logging.error - too strict
  "TRY401",  # Redundant exception object in logging.exception - too strict
  "TRY004",  # Prefer TypeError exception for invalid type - too strict
  "G004",    # Logging format string - too strict
  "LOG015",  # Using root logger - too strict
  "FBT001",  # Boolean positional argument - too strict
  "FBT002",  # Boolean default argument - too strict
  "FBT003",  # Boolean positional value - too strict
  "BLE001",  # Blind exception catch - sometimes necessary
  "PLR2004", # Magic value used in comparison - too strict for simple scripts
  "S607",    # Starting process with partial executable path - OK for git/docker/etc
  "S108",    # Probable insecure usage of temp file - too strict
  "INP001",  # Missing __init__.py in namespace package - not needed for all dirs
  "B023",    # Function definition does not bind loop variable - too strict
  "B008",    # Function call in argument defaults - too strict
  "B006",    # Mutable argument default - will be addressed separately
  "PLW0602", # Global variable not assigned - too strict
  "PLW0603", # Global variable being updated - too strict
  "PLW2901", # Outer variable overwritten by inner loop - too strict
  "PLW1508", # Invalid type for environment variable default - too strict
  "PLC0415", # Import outside top-level - sometimes necessary
  "RUF005",  # Collection literal concatenation - too strict
  "RUF015",  # Prefer next() over [0] indexing - too strict
  "RUF059",  # Unused unpacked assignment - too strict
  "SLF001",  # Private member access - sometimes necessary
  "ARG001",  # Unused function argument - sometimes required for API compatibility
  "ARG002",  # Unused method argument - sometimes required for API compatibility
  "ARG005",  # Unused lambda argument - sometimes required
  "RET503",  # Missing explicit return - too strict
  "RET504",  # Unnecessary assignment before return - too strict
  "RET505",  # Unnecessary else after return - too strict
  "RET506",  # Unnecessary else after raise - too strict
  "SIM102",  # Collapsible if statements - sometimes less readable
  "SIM115",  # Context manager for opening files - too strict
  "SIM210",  # Use ternary operator - sometimes less readable
  "E741",    # Ambiguous variable name - sometimes needed for math/physics
  "E721",    # Type comparison instead of isinstance - sometimes intentional
  "E722",    # Bare except - sometimes necessary
  "UP006",   # Use modern type annotations - too strict for compatibility
  "UP035",   # Import from collections.abc - too strict for compatibility
  "N801",    # Class name should use CapWords - sometimes intentional
  "N802",    # Function name should be lowercase - sometimes required by API
  "N806",    # Variable in function should be lowercase - sometimes intentional
  "N818",    # Exception name should end with 'Error' - sometimes 'Exception' is fine
  "A001",    # Variable shadowing built-in - sometimes acceptable
  "A002",    # Argument shadowing built-in - sometimes acceptable
  "A004",    # Import shadowing built-in - sometimes acceptable
  "B904",    # Raise from within except - will be addressed in future
  "C405",    # Set literal instead of set() call - too strict
  "ASYNC109", # Async function with timeout parameter - sometimes valid pattern
  "C416",    # Unnecessary list comprehension - too strict
  "PYI041",  # Type stub redundant numeric union - too strict
  "PERF401", # List comprehension instead of loop - too strict
]

[tool.ruff.lint.per-file-ignores]
# release_tools are standalone scripts, allow more flexibility
"release_tools/*.py" = ["T201", "S607", "PLR2004", "S108", "INP001"]
# Tests may need more flexibility
"tests/*.py" = ["ARG001", "PLR2004", "S101"]
# jsonrpyc is a forked library, be more lenient
"src/seclab_taskflow_agent/mcp_servers/codeql/jsonrpyc/*.py" = ["B904", "N802", "A002", "ARG002"]

