[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seclab-taskflow-agent"
dynamic = ["version"]
description = "A taskflow agent for the SecLab project, enabling secure and automated workflow execution."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "GitHub Security Lab", email = "securitylab@github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aiofiles==24.1.0",
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "attrs==25.3.0",
  "Authlib==1.6.6",
  "certifi==2025.6.15",
  "cffi==2.0.0",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "colorama==0.4.6",
  "cryptography==45.0.7",
  "cyclopts==3.24.0",
  "distro==1.9.0",
  "dnspython==2.8.0",
  "docstring_parser==0.17.0",
  "docutils==0.22",
  "email-validator==2.3.0",
  "exceptiongroup==1.3.0",
  "fastmcp==2.12.2",
  "griffe==1.7.3",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "httpx-sse==0.4.1",
  "idna==3.10",
  "importlib_metadata==8.7.0",
  "isodate==0.7.2",
  "jedi==0.19.2",
  "jiter==0.10.0",
  "jsonschema==4.24.0",
  "jsonschema-path==0.3.4",
  "jsonschema-specifications==2025.4.1",
  "lazy-object-proxy==1.12.0",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.2",
  "mcp==1.13.1",
  "mdurl==0.1.2",
  "more-itertools==10.8.0",
  "openai==1.107.0",
  "openai-agents==0.2.11",
  "openapi-core==0.19.5",
  "openapi-pydantic==0.5.1",
  "openapi-schema-validator==0.6.3",
  "openapi-spec-validator==0.7.2",
  "parse==1.20.2",
  "parso==0.8.4",
  "pathable==0.4.4",
  "platformdirs==4.5.0",
  "pluggy==1.6.0",
  "pycparser==2.23",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "pydantic_core==2.33.2",
  "Pygments==2.19.2",
  "pyperclip==1.9.0",
  "python-dotenv==1.1.1",
  "python-lsp-jsonrpc==1.1.2",
  "python-lsp-server==1.12.2",
  "python-multipart==0.0.20",
  "PyYAML==6.0.2",
  "referencing==0.36.2",
  "requests==2.32.4",
  "rfc3339-validator==0.1.4",
  "rich==14.0.0",
  "rich-rst==1.3.1",
  "rpds-py==0.26.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "SQLAlchemy==2.0.41",
  "sse-starlette==2.4.1",
  "starlette==0.49.1",
  "strenum==0.4.15",
  "tqdm==4.67.1",
  "typer==0.16.0",
  "types-requests==2.32.4.20250611",
  "typing-inspection==0.4.1",
  "typing_extensions==4.14.1",
  "ujson==5.10.0",
  "urllib3==2.6.3",
  "uvicorn==0.35.0",
  "zipp==3.23.0",
]

[project.urls]
Source = "https://github.com/GitHubSecurityLab/seclab-taskflow-agent"
Issues = "https://github.com/GitHubSecurityLab/seclab-taskflow-agent/issues"

[tool.hatch.version]
path = "src/seclab_taskflow_agent/__about__.py"

[tool.hatch.envs.default.scripts]
main = "python -m seclab_taskflow_agent {args:tests}"
sync-deps = ""

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/seclab_taskflow_agent tests}"

[tool.coverage.run]
source_pkgs = ["seclab_taskflow_agent", "tests"]
branch = true
parallel = true
omit = [
  "src/seclab_taskflow_agent/__about__.py",
]

[tool.coverage.paths]
seclab_taskflow_agent = ["src/seclab_taskflow_agent", "*/seclab-taskflow-agent/src/seclab_taskflow_agent"]
tests = ["tests", "*/seclab-taskflow-agent/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
ignore = [
  "T201",    # Allow print statements (used for CLI output)
  "G004",    # Allow f-strings in logging (more readable)
  "S607",    # Allow subprocess with partial paths (git commands are standard)
  "E741",    # Allow ambiguous variable names (single letters are common in loops)
  "N818",    # Allow exception names without Error suffix (existing convention)
  "TRY003",  # Allow long messages in exceptions (more readable)
  "LOG015",  # Allow simple logging without extra dict
  "EM102",   # Allow f-strings in exception messages
  "EM101",   # Allow string literals in exception messages
  "TID252",  # Allow relative imports (existing codebase pattern)
  "FA102",   # Don't require from __future__ import annotations
  "FA100",   # Don't require from __future__ import annotations
  "FBT001",  # Allow boolean positional args
  "FBT002",  # Allow boolean default args
  "BLE001",  # Allow catching Exception
  "SLF001",  # Allow accessing private members (needed for some integrations)
  "ARG001",  # Allow unused function arguments (may be required by interfaces)
  "RET504",  # Allow variable assignment before return
  "PLR2004", # Allow magic values in comparisons
  "TRY401",  # Allow verbose logging in exception handlers
  "TRY300",  # Allow return in try block with else
  "TRY301",  # Allow raise in try block with else
  "SIM115",  # Allow context manager without assignment
  "SIM210",  # Allow if-else instead of ternary
  "SIM102",  # Allow nested if statements
  "PERF102", # Allow dict.get() with default
  "PERF401", # Allow manual list comprehension
  "RUF059",  # Allow unused unpacked variables
  "RUF005",  # Allow unpacking instead of concatenation
  "RUF015",  # Allow list() instead of []
  "PLW2901", # Allow redefining loop variable
  "PLW0602", # Allow global variable usage
  "PLW0603", # Allow global statement usage
  "PLW1508", # Allow environment variable usage without default
  "UP006",   # Allow old-style type hints
  "UP035",   # Allow old-style imports
  "PLC0415", # Allow import outside top-level
  "PT011",   # Allow pytest.raises without match
  "RET503",  # Allow explicit return None
  "B006",    # Allow mutable default arguments (existing codebase pattern)
  "B023",    # Allow function definition without binding loop variable
  "B904",    # Allow raise without from in except clause
  "A001",    # Allow shadowing builtins (existing codebase pattern)
  "A002",    # Allow shadowing builtins in function arguments
  "A004",    # Allow shadowing builtins in imports
  "B007",    # Allow unused loop variable
  "B008",    # Allow function call in argument defaults
  "E721",    # Allow type() comparison instead of isinstance
  "E722",    # Allow bare except
  "S108",    # Allow probable insecure usage of temp file
  "TRY004",  # Allow type check in except clause
  "TRY400",  # Allow error() in except clause instead of exception()
  "N801",    # Allow class name not in CamelCase
  "N802",    # Allow function name not in snake_case
  "N806",    # Allow variable name not in snake_case
  "F401",    # Allow unused imports
  "F811",    # Allow redefinition of unused name
  "F821",    # Allow undefined name
  "F841",    # Allow unused local variable
  "C405",    # Allow unnecessary literals
  "C416",    # Allow unnecessary dict comprehension
]

[tool.ruff.lint.per-file-ignores]
"release_tools/*" = ["INP001"]  # Release tools don't need __init__.py
"tests/*" = ["S101"]  # Allow assert in tests
"src/seclab_taskflow_agent/mcp_servers/*" = ["INP001"]  # MCP servers are dynamically loaded
