[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seclab-taskflow-agent"
dynamic = ["version"]
description = "A taskflow agent for the SecLab project, enabling secure and automated workflow execution."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
  "agentic-workflows",
  "mcp",
  "security-research",
  "taskflow",
  "yaml",
  "pydantic",
  "openai-agents",
]
authors = [
  { name = "GitHub Security Lab", email = "securitylab@github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "aiofiles==24.1.0",
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "attrs==25.3.0",
  "Authlib==1.6.9",
  "certifi==2025.6.15",
  "cffi==2.0.0",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "colorama==0.4.6",
  "cryptography==46.0.6",
  "cyclopts==4.0.0",
  "distro==1.9.0",
  "dnspython==2.8.0",
  "docstring_parser==0.17.0",
  "docutils==0.22",
  "email-validator==2.3.0",
  "exceptiongroup==1.3.0",
  "fastmcp==2.14.2",
  "griffe==1.7.3",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "httpx-sse==0.4.1",
  "idna==3.10",
  "importlib_metadata==8.7.0",
  "isodate==0.7.2",
  "jedi==0.19.2",
  "Jinja2>=3.1.0",
  "jiter==0.10.0",
  "jsonschema==4.24.0",
  "jsonschema-path==0.3.4",
  "jsonschema-specifications==2025.4.1",
  "lazy-object-proxy==1.12.0",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.2",
  "mcp==1.24.0",
  "mdurl==0.1.2",
  "more-itertools==10.8.0",
  "openai==1.107.0",
  "openai-agents==0.2.11",
  "openapi-core==0.19.5",
  "openapi-pydantic==0.5.1",
  "openapi-schema-validator==0.6.3",
  "openapi-spec-validator==0.7.2",
  "parse==1.20.2",
  "parso==0.8.4",
  "pathable==0.4.4",
  "platformdirs==4.5.0",
  "pluggy==1.6.0",
  "pycparser==2.23",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "pydantic_core==2.33.2",
  "Pygments==2.20.0",
  "pyperclip==1.9.0",
  "python-dotenv==1.1.1",
  "python-lsp-jsonrpc==1.1.2",
  "python-lsp-server==1.12.2",
  "python-multipart==0.0.22",
  "PyYAML==6.0.2",
  "referencing==0.36.2",
  "requests==2.33.0",
  "rfc3339-validator==0.1.4",
  "rich==14.0.0",
  "rich-rst==1.3.1",
  "rpds-py==0.26.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "SQLAlchemy==2.0.41",
  "sse-starlette==2.4.1",
  "starlette==0.49.1",
  "strenum==0.4.15",
  "tqdm==4.67.1",
  "typer==0.16.0",
  "types-requests==2.32.4.20250611",
  "typing-inspection==0.4.1",
  "typing_extensions==4.15.0",
  "ujson==5.12.0",
  "urllib3==2.6.3",
  "uvicorn==0.35.0",
  "zipp==3.23.0",
]

[project.scripts]
seclab-taskflow-agent = "seclab_taskflow_agent.cli:app"

[project.urls]
Source = "https://github.com/GitHubSecurityLab/seclab-taskflow-agent"
Issues = "https://github.com/GitHubSecurityLab/seclab-taskflow-agent/issues"

[tool.hatch.version]
path = "src/seclab_taskflow_agent/__about__.py"

[tool.hatch.envs.default.scripts]
main = "python -m seclab_taskflow_agent {args:tests}"
sync-deps = ""

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/seclab_taskflow_agent tests}"

[tool.coverage.run]
source_pkgs = ["seclab_taskflow_agent", "tests"]
branch = true
parallel = true
omit = [
  "src/seclab_taskflow_agent/__about__.py",
]

[tool.coverage.paths]
seclab_taskflow_agent = ["src/seclab_taskflow_agent", "*/seclab-taskflow-agent/src/seclab_taskflow_agent"]
tests = ["tests", "*/seclab-taskflow-agent/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
# Set target version to 3.10 to support match statements
target-version = "py310"

[tool.ruff.lint]
# Baseline suppressions carried from the original codebase.
# Many of these fire in pre-existing MCP server code or reflect
# deliberate style choices.  Rules can be tightened incrementally.
ignore = [
  # Style choices — deliberate project conventions
  "EM101",    # Exception string literals
  "EM102",    # Exception f-strings
  "G004",     # Logging f-strings
  "T201",     # print() used for user output
  "TRY003",   # Raise with inline message strings

  # Backwards-compatibility suppressions for existing code
  "A001",     # Variable shadows built-in
  "A004",     # Import shadows built-in
  "FBT001",   # Boolean positional arg
  "FBT002",   # Boolean default value
  "N801",     # Class name casing
  "N802",     # Function name casing
  "N806",     # Variable casing
  "N818",     # Exception name suffix
  "SLF001",   # Private member access (MCP internals)

  # Framework / ecosystem constraints
  "ARG001",   # Unused function argument (hook/callback signatures)
  "B023",     # Function uses loop variable (async closures)
  "INP001",   # Implicit namespace package (src layout)
  "PLW2901",  # Outer loop variable overwritten
  "S701",     # Jinja2 autoescape=False (YAML, not HTML)
  "TID252",   # Relative imports from parent modules

  # Import organisation (deferred imports used for cycle-breaking)
  "I001",     # Import block unsorted
  "PLC0414",  # Useless import alias (intentional re-exports)
  "PLC0415",  # Import not at top-level (deferred imports)

  # Exception handling patterns
  "B904",     # raise without from in except
  "BLE001",   # Blind except (Exception)
  "TRY004",   # Prefer TypeError
  "TRY300",   # try-except-return
  "TRY301",   # Abstract raise to inner function
  "TRY400",   # logging.exception vs logging.error

  # Typing / annotation style
  "FA100",    # Missing from __future__ import annotations
  "FA102",    # Missing annotations import in stub
  "PYI036",   # __exit__ signature
  "PYI041",   # Use float instead of int | float
  "TC001",    # Move import into TYPE_CHECKING
  "TC002",    # Move import into TYPE_CHECKING
  "TC003",    # Move import into TYPE_CHECKING
  "UP006",    # Use X | Y for isinstance
  "UP007",    # Use X | Y union type
  "UP035",    # Import from collections.abc
  "UP045",    # Use X | None

  # Low-signal or noisy rules
  "B006",     # Mutable default argument (pre-existing in MCP servers)
  "B007",     # Unused loop control variable
  "B008",     # Function call in argument defaults
  "C416",     # Unnecessary comprehension
  "LOG015",   # Root logger usage
  "PERF102",  # Use keys()/values() instead of items()
  "PLR2004",  # Magic value comparisons
  "PLW0602",  # Global variable not assigned
  "PLW0603",  # Using global statement
  "PLW1508",  # Invalid envvar default
  "PT011",    # pytest.raises too broad
  "RET503",   # Missing explicit return
  "RET504",   # Unnecessary assignment before return
  "RET505",   # Unnecessary else after return
  "RSE102",   # Unnecessary parentheses on raised exception
  "RUF005",   # Unpack instead of concatenation
  "RUF022",   # __all__ not sorted
  "RUF023",   # __slots__ not sorted
  "RUF059",   # Unused unpacked variable
  "RUF100",   # Unused noqa directive
  "S108",     # Hardcoded temp file
  "S607",     # Partial path to executable
  "SIM102",   # Collapsible if
  "SIM115",   # Use context handler for file
  "SIM210",   # Use ternary operator
  "UP015",    # Unnecessary open mode
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]
